- Fix on anchor elements with long strings - Added component mediaChannels - Fix on inputs/buttons on iOS

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -194,6 +194,8 @@ button,
 a {
     color: var(--theme-links-default);
     text-decoration: none;
+    word-wrap: break-word;
+    overflow-wrap: anywhere;
 
     &:hover {
         color: var(--theme-links-hover);
